--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "postinstall": "npm install --prefix bot && npm install --prefix frontend",
         "build": "cd frontend && npm run build",
+        "dev": "node start-all.js --dev",
         "start": "node start-all.js"
     }
 }
