--- a/bot/package.json
+++ b/bot/package.json
@@ -8,8 +8,9 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
-        "telegraf": "^4.16.3",
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.4.5",
+        "mongodb": "^7.0.0",
+        "telegraf": "^4.16.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
