--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
