--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "eslint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "next": "16.1.1",
@@ -22,6 +23,7 @@
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17",
+    "telegraf": "^4.16.3",
     "three": "^0.182.0"
   },
   "devDependencies": {
