--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "postinstall": "npm install --prefix bot && npm install --prefix frontend",
+        "postinstall": "npm install --prefix frontend",
         "build": "cd frontend && npm run build",
-        "dev": "node start-all.js --dev",
-        "start": "node start-all.js"
+        "dev": "cd frontend && npm run dev",
+        "start": "cd frontend && npm start"
     }
 }
